<resources>
    <string name="app_name">GATI</string>
    <string name="title_activity_schedule">GATI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_progress_dialog">Title ProgressDialog</string>

    <!--auto update-->
    <string name="toast_last_version">Встановлена остання версія додатку</string>
    <string name="toast_exception_download">Помилка завантаження</string>
    <string name="update_is_exist">Доступне оновлення додатку</string>

    <!--Days-->
    <string name="mon">Понеділок</string>
    <string name="tue">Вівторок</string>
    <string name="wed">Середа</string>
    <string name="thu">Четвер</string>
    <string name="fri">П\'ятниця</string>
    <string name="sat">Субота</string>

    <!--Context menu-->
    <string name="share">Поділитись</string>
    <string name="share_is_failure">Не вдалося поділитися зображенням</string>
    <string name="refresh_image">Оновити</string>

    <!--navigation view-->
    <string name="send_email">Відправити email</string>
    <string name="monday">Понеділок</string>
    <string name="tuesday">Вівторок</string>
    <string name="wednesday">Середа</string>
    <string name="thursday">Четвер</string>
    <string name="friday">П`ятниця</string>
    <string name="saturday">Субота</string>
    <string name="communicate">Ми в інтернеті</string>
    <string name="our_site">Сайт інституту</string>
    <string name="youtube">YouTube</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="nav_header_title">GATI SNAU</string>
    <string name="email_info_center">gatisnau.infocentr@gmail.com</string>
    <string name="other_setting">Інше</string>
    <string name="update_app">Оновлення додатку</string>

    <!--Card view-->
    <string name="image_not_exist">Розкладу на цей день\nще не сформовано</string>
    <string name="old_schedule">Старий розклад</string>

    <!--Toolbar-->
    <string name="daytime">Денна</string>
    <string name="correspondence_time">Заочна</string>
    <string name="form">форма</string>

    <!--Network-->
    <string name="network_is_not_available">Відсутній доступ до мережі!\nПеревірте з\'єднання</string>
    <string name="internet_is_not_available">Відсутнй доступ до інтернету!\nСпробуйте пізніше</string>
    <string name="empty_string" />
    <string name="error_download_image">Помилка завантаження зображень</string>
    <string name="change_schedule_button">Кнопка зміни розкладу</string>
    <string name="sunday">Неділя</string>
    <string name="share_title">Поділитись зображенням</string>
    <string name="error_share_image">Не вдалося поділитися розкладом</string>
    <string name="gati_schedule">Розклад Гаті</string>
    <string name="schedule">Розклад</string>

</resources>
